examples/portal/openshift/new-tenant-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: portal-tenant-route
spec:
  host: <new-tenant-name>.portal.example.com   #replace portal.example.com with the right domain.Should be same as values.portal.domain
  to:
    kind: Service
    name: dispatcher
    weight: 100
  port:
    targetPort: portal-https
  tls:
    termination: passthrough
  wildcardPolicy: None
